se añade el score

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ background-size: cover;
   height:800px;
 
   position: relative; 
- /* overflow: hidden; */
+  overflow: hidden; 
   user-select: none; 
 background-image: url("./img/background-1_0.png");
 background-position: center;
