--- a/style.css
+++ b/style.css
@@ -10,27 +10,115 @@ h2 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  text-shadow: 10px 10px 20px rgba(255, 5, 5, 0);
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
 #game-info p {
-  width: 700px;
   text-align: center;
   color: white;
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}
+
+#splash-screen{
+
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#columnas{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  
+  
+}
+
+#controles{
+  border-color: white;
+  float:left; 
+  box-sizing: border-box;
+  width: 400px;
+  height: 300px;
+  border-width: 3px 3px 5px 5px;
+  border-radius:4% 95% 6% 95%/95% 4% 92% 5%;
+  transform: rotate(-2deg);
+  transform: rotate(2deg);
+  margin:15px;
+  padding:0 5px;
+  float:right;
+  background:#2c2b2b2c;
+  border:1px solid white;
+  box-shadow:3px 3px 0 #222;
+}
+
+#controles img{
+ justify-content: center;
+  
 }
 
 #game-rules {
   color: white;
+  border-color: white;
+  float:left; 
+  box-sizing: border-box;
+  width: 400px;
+  height: 300px;
+  border-width: 3px 3px 5px 5px;
+  border-radius:4% 95% 6% 95%/95% 4% 92% 5%;
+  transform: rotate(-2deg);
+  transform: rotate(2deg);
+  margin:15px;
+  padding:0 5px;
+  float:right;
+  background:#2c2b2b2c;
+  border:1px solid white;
+  box-shadow:3px 3px 0 #222;
 }
 #game-rules li {
   color: white;
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
 
+#game-info{
+  
+  box-sizing: border-box;
+  border-color: white;
+  float:left; 
+  width: 400px;
+  height: 300px;
+  text-align: center;
+  border-width: 3px 3px 5px 5px;
+  border-radius:4% 95% 6% 95%/95% 4% 92% 5%;
+  transform: rotate(-2deg);
+  transform: rotate(2deg);
+  margin:15px;
+  padding:0 5px;
+  float:right;
+  background:#2c2b2b2c;
+  border:1px solid white;
+  box-shadow:3px 3px 0 #222;
+
+}
+.inicio{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 50px;
+  
 }
 #score{
   color : white;
@@ -41,6 +129,7 @@ h2 {
   justify-content: flex-start;
   padding: 0;
   margin: 0;
+  text-shadow:  1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 
 
 }
@@ -49,14 +138,11 @@ h2 {
   color : white;
   font-family: "Pixelify Sans", sans-serif;
   font-size: 35px;
+  text-shadow:  1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 
 }
 
 
-#booster-img {
-  width: 20px;
-  height: 20px;
-}
 #start-game-btn {
   background-image: url("./img/startBtn.png");
   color: transparent;
